# btck-rust-node

./: .gitignore  BITCOIN_CORE_COMPARISON.md  CONTRIBUTING.md  Cargo.toml  FUTURE_IMPROVEMENTS.md  LICENSE  README.md  TEST_PLAN.md  build.rs
data_signet/blocks/index/: 000008.sst  IDENTITY  LOG  LOG.old.1761578267017972  MANIFEST-000010  OPTIONS-000007
data_signet/chainstate/blocks/index/: 000005.ldb  MANIFEST-000004
data_signet/chainstate/chainstate/: 000005.ldb  MANIFEST-000004
docs/: CONVERSION_ROADMAP.md  FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE.md  SUMMARY.md  bitcoin_core_to_rust_plan.md
src/: addrman.rs  chainparams.rs  ffi.rs  main.rs  seeds.rs
src/kernel/: mod.rs
src/mempool/: entry.rs  fees.rs  mod.rs  policy.rs  txmempool.rs
src/network/: connman.rs  mod.rs
src/p2p/: inventory.rs  legacy.rs  manager.rs  messages.rs  mod.rs  peer.rs
src/rpc/: blockchain.rs  mod.rs  network.rs
