[package]
name = "btck-rust-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Bitcoin Core node implementation in Rust using libbitcoinkernel"
license = "MIT"
repository = "https://github.com/yourusername/btck-rust-node"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Web framework for RPC
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "compression-full"] }
hyper = "0.14"

# Bitcoin protocols and types
bitcoin = { version = "0.32", features = ["serde", "rand"] }
bitcoin_hashes = "0.14"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }

# Database
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env", "color"] }

# Cryptography
rand = "0.8"
sha2 = "0.10"
ripemd = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base58 = "0.2"
base64 = "0.22"
bs58 = "0.5"

# Networking
trust-dns-resolver = "0.23"
socket2 = "0.5"

# Configuration
toml = "0.8"
config = "0.14"

# Data structures
dashmap = "5"
parking_lot = "0.12"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
bindgen = "0.69"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1"
tempfile = "3"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 1

# Feature flags for conditional compilation
[features]
default = ["wallet", "zmq"]

# Optional features
wallet = []
zmq = []
mining = []
gui = []

# Testing features
test-util = []

[[bin]]
name = "btck-rust-node"
path = "src/main.rs"

# Benchmarks temporarily disabled
# [[bench]]
# name = "network_bench"
# harness = false

# [[bench]]
# name = "mempool_bench"
# harness = false

# Examples temporarily disabled
# [[example]]
# name = "simple_node"
# path = "examples/simple_node.rs"

# [[example]]
# name = "rpc_client"
# path = "examples/rpc_client.rs"
